fake-api/ing-examples/ing-host.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: api-ing
  namespace: api
  labels: 
    app: api
    name: api-ing
spec: 
  ingressClassName: nginx 
  rules:
  - host: v1.api.144.126.241.179.nip.io
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: api-svc
            port: 
              number: 3000
  - host: v2.api.144.126.241.179.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: api-v2-svc
            port: 
              number: 3000
