fake-api/ing-examples/ing-rewrite.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: api-ing
  namespace: api
  labels: 
    app: api
    name: api-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec: 
  ingressClassName: nginx 
  rules:
  - host: api.144.126.241.179.nip.io
    http:
      paths: 
      - path: /v1(/|$)(.*)
        pathType: ImplementationSpecific 
        backend: 
          service: 
            name: api-svc
            port: 
              number: 3000
  - host: api.144.126.241.179.nip.io
    http:
      paths: 
      - path: /v2(/|$)(.*)
        pathType: ImplementationSpecific 
        backend: 
          service: 
            name: api-v2-svc
            port: 
              number: 3000
